// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTextEdits should create text edits for deletions 1`] = `
[
  {
    "newText": "",
    "range": {
      "end": {
        "character": 4,
        "line": 3,
      },
      "start": {
        "character": 4,
        "line": 2,
      },
    },
  },
]
`;

exports[`createTextEdits should create text edits for insertions 1`] = `
[
  {
    "newText": "	font-size: 12px;
			",
    "range": {
      "end": {
        "character": 3,
        "line": 3,
      },
      "start": {
        "character": 3,
        "line": 3,
      },
    },
  },
]
`;

exports[`createTextEdits should create text edits for insertions and deletions 1`] = `
[
  {
    "newText": "",
    "range": {
      "end": {
        "character": 17,
        "line": 2,
      },
      "start": {
        "character": 16,
        "line": 2,
      },
    },
  },
  {
    "newText": "4",
    "range": {
      "end": {
        "character": 17,
        "line": 2,
      },
      "start": {
        "character": 17,
        "line": 2,
      },
    },
  },
  {
    "newText": "",
    "range": {
      "end": {
        "character": 21,
        "line": 3,
      },
      "start": {
        "character": 19,
        "line": 2,
      },
    },
  },
  {
    "newText": "",
    "range": {
      "end": {
        "character": 20,
        "line": 8,
      },
      "start": {
        "character": 17,
        "line": 8,
      },
    },
  },
  {
    "newText": "e2e2e2",
    "range": {
      "end": {
        "character": 20,
        "line": 8,
      },
      "start": {
        "character": 20,
        "line": 8,
      },
    },
  },
  {
    "newText": "'",
    "range": {
      "end": {
        "character": 25,
        "line": 8,
      },
      "start": {
        "character": 25,
        "line": 8,
      },
    },
  },
  {
    "newText": "",
    "range": {
      "end": {
        "character": 29,
        "line": 8,
      },
      "start": {
        "character": 26,
        "line": 8,
      },
    },
  },
  {
    "newText": "bar",
    "range": {
      "end": {
        "character": 29,
        "line": 8,
      },
      "start": {
        "character": 29,
        "line": 8,
      },
    },
  },
  {
    "newText": "'",
    "range": {
      "end": {
        "character": 33,
        "line": 8,
      },
      "start": {
        "character": 33,
        "line": 8,
      },
    },
  },
]
`;
